src/css/custom.css
@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #005CB9;
  --ifm-color-primary-dark: #034D8A;
  --ifm-color-primary-light: #00A7E1;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
  --ifm-font-family-base: 'Lora', serif;
  --ifm-navbar-height: 5.0rem;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: #00a7e1;
  --ifm-color-primary-dark: #0096cb;
  --ifm-color-primary-darker: #008ebf;
  --ifm-color-primary-darkest: #00759e;
  --ifm-color-primary-light: #00b8f8;
  --ifm-color-primary-lighter: #04beff;
  --ifm-color-primary-lightest: #25c7ff;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

/*Increase default font size*/
@media screen and (max-width: 996px) {
  :root {
    --ifm-font-size-base: 18px;
  }
  article header h1 {
    font-size: 1.5rem !important;
  }
}

@media screen and (min-width: 997px) {
  :root {
    --ifm-font-size-base: 17px;
  }
  article header h1 {
    font-size: 2rem !important;
  }
}

/*Change hero banner color to match primary*/
.hero {
  background-color: var(--ifm-color-primary);
  margin-bottom: 2rem;
}

/*Change hero__title to use Playfair Display*/
.hero .hero__title {
  font-family: 'Playfair Display', serif;
  font-size: 3.5rem;
}

/*Change hero__subtitle to use Source Sans 3*/
.hero .hero__subtitle {
  font-family: 'Source Sans 3', sans-serif;
}

/*Change navbar__title to use Source Sans 3*/
.navbar__title {
  font-family: 'Source Sans 3', sans-serif;
}

/*Change navbar__link to use Source Sans 3*/
.navbar__link {
  font-family: 'Source Sans 3', sans-serif;
}

/* Change navbar background color */
.navbar {
  background-image: url('/img/Topography_LightGray_Alternate.png');
  justify-content: center;
}

.navbar__inner{
  max-width: var(--ifm-container-width-xl);
}

/*Change button to use Source Sans 3*/
.button {
  font-family: 'Source Sans 3', sans-serif;
  background-color: var(--ifm-color-primary-light);
  color: #fff;
}

/*Change secondary buttons to use white text*/
.button.button--secondary.button--lg {
  color: #fff;
}

/* secondary button hover */
.button.button--secondary.button--lg:hover {
  background-color: white;
  color: black;
}

/* donate button, dark primary color, white text, extra space on the right */
.button.button--primary.button--lg {
  background-color: var(--ifm-color-primary);
  color: #fff;
  margin-right: 1.5rem;
  padding: 0.5rem 1.5rem;
}

/* add padding above homepage images */
.features_src-components-HomepageFeatures-styles-module {
  font-family: 'Source Sans 3', sans-serif;
}

.features_src-components-HomepageFeatures-styles-module h3 {
  margin-top: 1.5rem;
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
}

.features_src-components-HomepageFeatures-styles-module p {
  font-size: 1.2rem;
}

/*Change footer color to match primary*/
.footer {
  background-color: var(--ifm-color-primary);
}

/*Give images on explainer webpages some room to breathe*/
.img_node_modules-\@docusaurus-theme-classic-lib-theme-MDXComponents-Img-styles-module {
  margin-top: 1rem;
  margin-bottom: 2rem;
}

/* Space out assessment explanations */
.anchorWithStickyNavbar_node_modules-\@docusaurus-theme-classic-lib-theme-Heading-styles-module {
  margin-top: 1.7rem;
}

.col.col--8 h1 {
  font-family: 'Playfair Display', serif;
  font-size: 2.25rem;
  text-align: center;
  padding-top: 1rem;
}

/*Change footer__copyright to use Source Sans 3*/
.footer__copyright {
  font-family: 'Source Sans 3', sans-serif;
  font-weight: 600;
  color: #fff;
}

/*Change h2 to primary light*/
h2 {
  color: var(--ifm-color-primary-light);
  font: 1.75rem 'Playfair Display', serif;
  font-weight: 500;
  padding-top: 0.6rem;
}

h3 {
  font: 1.5rem 'Lora', serif;
  font-weight: 500;
  padding-top: 0.4rem;
}

/* create a class for primary light paragraph text */
.primary-dark {
  color: var(--ifm-color-primary-dark);
}

/* a class for image captions */
.caption {
  font-size: 0.8rem;
  font-style: italic;
  text-align: center;
  color: gray;
  margin-top: 0px;
  padding-top: 0px;
}

.custom-button {
  background-color: var(--ifm-color-primary); /* Primary color */
  color: white; /* White text color */
  padding: 0.5rem 1.5rem; /* Padding */
  border-radius: 0.5rem; /* Rounded corners */
  cursor: pointer; /* Pointer on hover */
  display: inline-block; /* Inline elements */
  text-align: center; /* Center text */
  text-decoration: none; /* No underline */
  font-size: 1rem; /* Font size */
  font-weight: 600; /* Font weight */
  margin: 0.5rem; /* Margin */
  transition: all 0.3s ease; /* Smooth transition */
  border: 2px solid transparent; /* Default border (transparent) */
}

.custom-button:hover {
  background-color: white; /* Change background color on hover */
  color: var(--ifm-color-primary); /* Change text color */
  transform: scale(1.05); /* Slight zoom effect */
  border-color: var(--ifm-color-primary); /* Set border color */
}

